# snakehelper

./: .coveragerc  .gitignore  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  snakemake_API.txt
.github/workflows/: ci.yml
docs/: Makefile  changelog.rst  conf.py  index.rst
examples/: snakehelper_example.py
src/snakehelper/: SnakeIOHelper.py  skeleton.py
tests/: conftest.py  test_skeleton.py  test_snakehelper.py
tests/make_files/: workflow_common.smk  workflow_error.smk
tests/scripts/: error.py  normal.py
