[project]
name = "snakehelper"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "'Teris", email = "'teristam@gmail.com'" }
]
requires-python = ">=3.11"
dependencies = [
    "snakemake==9.0.0",
    'pytest',
    "ipykernel>=6.29.5",
]

[project.scripts]
snakehelper = "snakehelper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
